[gd_scene load_steps=55 format=2]

[ext_resource path="res://Enemy/SpireSkelly.gd" type="Script" id=1]
[ext_resource path="res://Enemy/GOD3.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/HurtBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemy/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemy/AttackZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "AttackLeft"
length = 0.9
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finiished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "AttackRight"
length = 0.9
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 13, 12, 11, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finiished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "DeathLeft"
length = 0.95
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 47, 46, 45, 44 ]
}

[sub_resource type="Animation" id=4]
resource_name = "DeathRight"
length = 0.95
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 39, 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=5]
resource_name = "IdleLeft"
length = 0.7
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "IdleRight"
length = 0.7
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "RunLeft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 37, 36, 35, 34, 33, 32, 31, 30 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "RunRight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27, 28, 29 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "AttackLeft"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "AttackRight"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "AttackLeft"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "AttackRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=14]
blend_point_0/node = SubResource( 10 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 11 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 12 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 13 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "DeathLeft"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "DeathRight"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "DeathLeft"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "DeathRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=19]
blend_point_0/node = SubResource( 15 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 16 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 17 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 18 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=24]
blend_point_0/node = SubResource( 20 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 21 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 22 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 23 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "RunRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=29]
blend_point_0/node = SubResource( 25 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 26 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 27 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 28 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachine" id=42]
states/Attack/node = SubResource( 14 )
states/Attack/position = Vector2( 402, 218 )
states/Death/node = SubResource( 19 )
states/Death/position = Vector2( 597, 218 )
states/Idle/node = SubResource( 24 )
states/Idle/position = Vector2( 402, 99 )
states/Run/node = SubResource( 29 )
states/Run/position = Vector2( 597, 99 )
transitions = [ "Idle", "Run", SubResource( 30 ), "Run", "Idle", SubResource( 31 ), "Idle", "Attack", SubResource( 32 ), "Attack", "Idle", SubResource( 33 ), "Run", "Attack", SubResource( 34 ), "Attack", "Run", SubResource( 35 ), "Idle", "Death", SubResource( 36 ), "Run", "Death", SubResource( 38 ), "Attack", "Death", SubResource( 40 ) ]
start_node = "Idle"
graph_offset = Vector2( -91, 45 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=43]

[sub_resource type="CapsuleShape2D" id=44]
radius = 6.0
height = 10.0

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 32, 3.00008 )

[sub_resource type="CircleShape2D" id=45]
radius = 100.404

[sub_resource type="CircleShape2D" id=49]

[sub_resource type="RectangleShape2D" id=52]
extents = Vector2( 32, 0 )

[sub_resource type="CircleShape2D" id=51]
radius = 39.0

[node name="SpireSkelly" type="KinematicBody2D"]
position = Vector2( 0, -2 )
collision_layer = 9
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 8
vframes = 7
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/AttackLeft = SubResource( 1 )
anims/AttackRight = SubResource( 2 )
anims/DeathLeft = SubResource( 3 )
anims/DeathRight = SubResource( 4 )
anims/IdleLeft = SubResource( 5 )
anims/IdleRight = SubResource( 6 )
anims/RESET = SubResource( 7 )
anims/RunLeft = SubResource( 8 )
anims/RunRight = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 42 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 43 )
parameters/Attack/blend_position = Vector2( 0, 0 )
parameters/Death/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 44 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 7 )
rotation = 3.14159
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 1.90735e-06, 0 )
shape = SubResource( 50 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -1 )

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.243137 )
shape = SubResource( 45 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 2

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, 4 )
shape = SubResource( 49 )

[node name="AttackZone" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="AttackZone" index="0"]
shape = SubResource( 52 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 2 )
shape = SubResource( 51 )

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="Hitbox"]
[editable path="PlayerDetectionZone"]
[editable path="HurtBox"]
[editable path="AttackZone"]
[editable path="SoftCollision"]
